--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "ng-moment-pipes",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "pipes and filters for angular",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "dependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "moment": "^2.20.1",
+    "@angular/common": "~5.0",
+    "@angular/compiler": "~5.0",
+    "@angular/core": "~5.0",
+    "moment": "~2.20",
     "rxjs": "^5.5.2"
   },
   "devDependencies": {
     "@angular/cli": "1.6.2",
-    "@angular/compiler-cli": "^5.0.0",
+    "@angular/compiler-cli": "~5.0",
     "@types/node": "~6.0.60",
+    "@types/moment": "~2.20",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.4.2",
+    "moment": "~2.20"
   },
   "scripts": {
     "prepublish": "npm run build",
